# Ultra-Low-Latency-Market-Data-Processing-Engine

./: .gitignore  CMakeLists.txt  Dockerfile.engine  Dockerfile.streamer  README.md  docker-compose.yml  requirements.txt
data/: CLX5_lines.txt  fake_replay.txt
include/common/: net.hpp
include/engine/: engine.hpp  order_book.hpp
include/streamer/: streamer.hpp
scripts/: dbn_to_lines.py
src/: CMakeLists.txt
src/common/: net.cpp
src/engine/: engine.cpp  main.cpp  order_book.cpp
src/streamer/: main.cpp  streamer.cpp
tests/: CMakeLists.txt  tests_book.cpp
